[gd_scene load_steps=8 format=3 uid="uid://6bcnjf3ye2ny"]

[ext_resource type="Script" path="res://scripts/flying_enemy.gd" id="1_mpgh7"]
[ext_resource type="Texture2D" uid="uid://dptb71vp3ll08" path="res://assets/sprites/jellyfish.png" id="2_fdflx"]
[ext_resource type="AudioStream" uid="uid://cb2u57v5qmjmt" path="res://assets/sounds/tap.wav" id="3_eo4pq"]

[sub_resource type="Animation" id="Animation_sbmu4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fgcv8"]
resource_name = "idle"
length = 1.8
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -2), Vector2(0, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1, 1.16667, 1.33333, 1.5, 1.66667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 4, 3, 2, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ue6a7"]
_data = {
"RESET": SubResource("Animation_sbmu4"),
"idle": SubResource("Animation_fgcv8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ujumk"]
size = Vector2(166, 130)

[node name="Flying Enemy" type="CharacterBody2D"]
script = ExtResource("1_mpgh7")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -6)
texture = ExtResource("2_fdflx")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ue6a7")
}
autoplay = "idle"

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_eo4pq")
bus = &"SFX"

[node name="Vision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource("RectangleShape2D_ujumk")

[connection signal="timeout" from="ShootTimer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Vision" to="." method="_on_vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_vision_body_exited"]
